<resources>
    <string name="app_name">Penghitungan Konsumsi Bahan Bakar</string>
    <string name="jarakAwal">Jarak Awal (km)</string>
    <string name="jarakAkhir">Jarak Akhir (km)</string>
    <string name="bensin">Jumlah Bensin (liter)</string>
    <string name="hitung">Hitung</string>
    <string name="hapus">Refresh</string>
    <string name="hasil_jumlah">Konsumsi Bensin : %1$.2f km/liter</string>
    <string name="km">Km/liter</string>
    <string name="hasil_jarak">Jarak yang ditempuh : %1$.2f Km</string>
    <string name="sedang">Sedang</string>
    <string name="irit">Irit</string>
    <string name="boros">Boros</string>
    <string name="kategori">Termasuk golongan : %1$s</string>
    <string name="penjelasan">Aplikasi ini akan melakukan input data berupa (angka) jarak dengan satuan kilometer
        dan jumlah bahan bakar yang digunakan dengan satuan liter,
        selisih dari jarak awal dan jarak akhir akan menjadi sebuah angka jarak dan akan melakukan proses penghitungan
        menggunakan rumus yang sesuai yaitu jarak yang ditempuh akan dibagi dengan jumlah bensin yang digunakan,
        maka akan menghasilkan output data dengan satuan km/l.\n\nUntuk menghitung ini pastikan
        pada saat mencatat jarak awal (lihat pada odometer kendaraan)pastikan kondisi tangki bahan bakar terisi penuh,
        dan setelah anda berjalan ke titik selanjutnya isi kembali bensin kendaraan hingga penuh kembali,
        lalu catat jarak yang terdapat pada odometer kendaraan dan jumlah bensin yang di isi,
        masukan ketiga data tersebut ke form isian lalu klik tombol hitung akan menghasilkan data konsumsi bahan bakar.
</string>
    <string name="deskrip">Deskripsi Aplikasi</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template"> %1$s\n%2$s\n%3$s</string>
    <string name="kosong">Data Kosong</string>
    <string name="lihat">Riwayat</string>
    <string name="listData">Riwayat Data</string>
    <string name="hasil_hitung">Hasil: %1$.2f km/liter - %2$s</string>
    <string name="detail_hitung">Jarak: %1$.1f km - Bensin: %2$.1f liter - %3$s</string>
<!--    <string name="jenis_hitung">Jenis: %1$s/string>-->
    <string name="jenis">Jenis Kendaraan</string>
    <string name="mobil">Mobil</string>
    <string name="motor">Motor</string>
    <string name="jenis_kosong">Jenis Kendaraan Tidak Valid</string>
    <string name="hapus_histori">Hapus</string>
    <string name="konfirmasi_hapus">Hapus semua ?</string>
    <string name="konfirmasi_hapus_satu">Hapus data ?</string>
    <string name="hapus_list">HAPUS</string>
    <string name="batal">BATAL</string>
    <string name="detail">lihat List</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update Otomatis</string>
    <string name="notif_text">Cek Aplikasi Sekarang</string>
    <string name="notif_title">Ada yang baru nih !</string>
    <string name="datahasil">Data Lainnya</string>
    <string name="koneksi_error">Koneksi Erorr</string>

</resources>