<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/hitungFragment">

    <fragment
        android:id="@+id/hitungFragment"
        android:name="org.d3if0044.assessment1_hitungbahanbakar.ui.hitung.HitungFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_hitung" >
        <action
            android:id="@+id/action_hitungFragment_to_penjelasanFragment"
            app:destination="@id/penjelasanFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/penjelasanFragment"
        android:name="org.d3if0044.assessment1_hitungbahanbakar.ui.PenjelasanFragment"
        android:label="@string/deskrip"
        tools:layout="@layout/fragment_penjelasan"/>
    <fragment
        android:id="@+id/listFragment"
        android:name="org.d3if0044.assessment1_hitungbahanbakar.ui.listdata.listFragment"
        android:label="@string/lihat"
        tools:layout="@layout/fragment_listdata"/>
</navigation>